Style fixes. Dark mode

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,31 +1,47 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
   }
-}
 
-.App-Header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
 
-.App-link {
-  color: #61dafb;
+  .App-Header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
+
+  .App-link {
+    color: #61dafb;
+  }
+
+  input[type="text"] {
+    font-size: 1em;
+    padding: 20px;
+  }
+
+  &.light {
+    .App-Header {
+      background-color: #fff;
+      color: #282c34;
+    }
+
+    .App-link {
+      color: darken(#61dafb, 30%);
+    }
+  }
 }
 
 @keyframes App-logo-spin {
